# PengSheng

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/peng/app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/peng/app/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/peng/app/: ExampleUnitTest.java
ipc_client/: build.gradle
ipc_client/src/androidTest/java/com/peng/ipc_client/: ExampleInstrumentedTest.java
ipc_client/src/main/: AndroidManifest.xml
ipc_client/src/main/aidl/com/peng/ipc_server/: AMessageInfo.aidl  (+3 more)
ipc_client/src/main/res/values/: strings.xml
ipc_server/: build.gradle
ipc_server/src/main/: AndroidManifest.xml
ipc_server/src/main/res/values/: strings.xml
ndkrtspserver/: CMakeLists.txt  build.gradle
ndkrtspserver/src/main/: AndroidManifest.xml
ndkrtspserver/src/main/java/com/peng/jni/: AACEncoder.java  AudioConfig.java  AudioConfigBuilder.java  AudioRecordUtils.java  CameraUtil.java  ELog.java  G711Code.java  H264Encoder.java  OnClientNumberListener.java  RtspServerJni.java  ThreadPool.java  Util.java
ndkrtspserver/src/main/java/com/peng/ndkrtspserver/: MainActivity.java
ndkrtspserver/src/main/jni/: rtsp_server_jni.cpp
ndkrtspserver/src/main/jni/net/: Acceptor.cpp  EpollTaskScheduler.cpp  EventLoop.cpp  Logger.h  TcpSocket.cpp
ndkrtspserver/src/main/jni/xop/: AACSource.cpp  DigestAuthentication.cpp  G711ASource.cpp  rtp.h
ndkrtspserver/src/main/res/layout/: activity_main.xml
ndkrtspserver/src/main/res/values/: strings.xml
(+9 files in other folders)
